--- a/kalashnikova_reanalysis/scripts/kalashnikova_reanalysis.Rmd
+++ b/kalashnikova_reanalysis/scripts/kalashnikova_reanalysis.Rmd
@@ -21,6 +21,8 @@ library(lme4)
 library(ggeffects)
 library(apaTables)
 library(sjPlot)
+library(car)
+library(psych)
 
 `%notin%` <- Negate(`%in%`)
 
@@ -75,7 +77,6 @@ blues <- blues_palette(12)
 
 
 ```
-#Analysis with our exclusion criteria
 
 ##Prep data
 ```{r}
@@ -139,8 +140,9 @@ aud_all <- aud_left %>%
          trial_num = as.numeric(trial_num),
          trial_name = as.factor(trial_name),
          group = factor(group, levels = c("monolingual", "bilingual"))) %>%
-  filter(id %notin% exclusions$id) #get rid of any kids that match an ID in the exclusions file
-
+  filter(id %notin% exclusions$id) %>% #get rid of any kids that match an ID in the exclusions file
+  filter(auditory_tl <= 0.6) #filter for Kalashnikova's trackloss
+  
 ##-------------------------------------------------------MAKE AUDITORY EYETRACKING DATA
 aud_eyetracking <- aud_all %>%
   make_eyetrackingr_data(participant_column = "id",
@@ -155,19 +157,35 @@ aud_full_trial <- make_time_sequence_data(aud_eyetracking,
                                          predictor_columns = c("group", "trial_type", "trial_num"),
                                          aois = c("center", "target", "distractor"))
 
+#=====================================for filtered sample reported in manuscript, uncomment A below. For the unfiltered sample reported in supplemantals, uncomment B below.
+
+#=====================================# A
+# aud_anticipation_window <- subset_by_window(aud_eyetracking,
+#                                             window_start_time = 2350,
+#                                             window_end_time = 3350,
+#                                             rezero = TRUE,
+#                                             remove = TRUE) %>%
+#   clean_by_trackloss(trial_prop_thresh = .5) %>% #remove trials that don't have at least 50% looking
+#   #remove kids who don't have at least 7 out of 12 trials
+#   group_by(id, trial_type) %>%
+#   mutate(num_trials = length(unique(trial_num))) %>%
+#   filter(num_trials >= 7) %>%
+#   group_by(id) %>%
+#   mutate(num_trial_types = length(unique(trial_type))) %>%
+#   filter(num_trial_types == 2)
+
+#====================================# end A
+
+
+#====================================# B
+# 
 aud_anticipation_window <- subset_by_window(aud_eyetracking,
                                             window_start_time = 2350,
                                             window_end_time = 3350,
                                             rezero = TRUE,
-                                            remove = TRUE) %>%
-  clean_by_trackloss(trial_prop_thresh = .5) %>% #remove trials that don't have at least 50% looking 
-  #remove kids who don't have at least 7 out of 12 trials
-  group_by(id, trial_type) %>%
-  mutate(num_trials = length(unique(trial_num))) %>%
-  filter(num_trials >= 7) %>%
-  group_by(id) %>%
-  mutate(num_trial_types = length(unique(trial_type))) %>%
-  filter(num_trial_types == 2)
+                                            remove = TRUE)
+
+#====================================# end B
   
 
 aud_final_sample_ids <- aud_anticipation_window %>%
@@ -216,7 +234,8 @@ vis_all <- vis_left %>%
          trial_num = as.numeric(trial_num),
          trial_name = as.factor(trial_name),
          group = factor(group, levels = c("monolingual", "bilingual"))) %>%
-  filter(id %notin% exclusions$id)
+  filter(id %notin% exclusions$id) %>%
+  filter(visual_tl <= 0.6) #kalashnikova's original trackloss threshold
 
 #check for babies missing info:
 
@@ -273,19 +292,35 @@ vis_full_trial <- make_time_sequence_data(vis_eyetracking,
                                          predictor_columns = c("group", "trial_type", "trial_num"),
                                          aois = c("center", "target", "distractor"))
 
+
+#========================================# for filtered sample reported in manuscript, uncomment A below. For the unfiltered sample reported in supplemantals, uncomment B below.
+
+#========================================# A
+
+# vis_anticipation_window <- subset_by_window(vis_eyetracking,
+#                                             window_start_time = 3650,
+#                                             window_end_time = 4650,
+#                                             rezero = TRUE,
+#                                             remove = TRUE) %>%
+#   clean_by_trackloss(trial_prop_thresh = .5) %>% #remove trials that don't have at least 50% looking
+#   #remove kids who don't have at least 7 out of 12 trials
+#   group_by(id, trial_type) %>%
+#   mutate(num_trials = length(unique(trial_num))) %>%
+#   filter(num_trials >= 7) %>%
+#   group_by(id) %>%
+#   mutate(num_trial_types = length(unique(trial_type))) %>%
+#   filter(num_trial_types == 2)
+
+#========================================# end A
+
+#========================================# B
+
 vis_anticipation_window <- subset_by_window(vis_eyetracking,
                                             window_start_time = 3650,
                                             window_end_time = 4650,
                                             rezero = TRUE,
-                                            remove = TRUE) %>%
-  clean_by_trackloss(trial_prop_thresh = .5) %>% #remove trials that don't have at least 50% looking 
-  #remove kids who don't have at least 7 out of 12 trials
-  group_by(id, trial_type) %>%
-  mutate(num_trials = length(unique(trial_num))) %>%
-  filter(num_trials >= 7) %>%
-  group_by(id) %>%
-  mutate(num_trial_types = length(unique(trial_type))) %>%
-  filter(num_trial_types == 2)
+                                            remove = TRUE)
+#========================================# end B
   
 
 vis_final_sample_ids <- vis_anticipation_window %>%
@@ -411,7 +446,7 @@ final_sample_aud_full_trial %>%
   xlab("\nTime from trial start (ms)")  +
   ylab("Proportion looking\n")
 
-ggsave("plot_full_trial_auditory.png", path = here("figures"), device = "png", width = 9, height = 11, units = "in", dpi = 300)
+#ggsave("plot_full_trial_auditory.png", path = here("figures"), device = "png", width = 9, height = 11, units = "in", dpi = 300)
 
 
 ###---------------------------------------------------VISUAL (using anticipation period 3650 - 4650)
@@ -443,8 +478,7 @@ final_sample_vis_full_trial %>%
          TRUE ~ 0)) %>%
   ggplot(aes(x = Time, y = prop_looking, color = group, linetype = aoi)) + 
   geom_rect(aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, fill = "Anticipation Period 1"), alpha = .1, colour = "transparent", show.legend = FALSE) +
- # geom_rect(aes(xmin = xmin2, xmax = xmax2, ymin = ymin2, ymax = ymax2, fill = "Anticipation Period 2"), alpha = .1, colour = "transparent", show.legend = FALSE) +
-  geom_line(aes(alpha = aoi, size = aoi)) +
+   geom_line(aes(alpha = aoi, size = aoi)) +
   scale_color_manual(values = line_colors, guide = guide_legend(order = 1), labels = c("Monolinguals", "Bilinguals")) +
   scale_fill_manual(values = c("#ffb600", "#556677"), labels = c("Anticipation Period 1", "Anticipation Period 2"), guide = guide_legend(order = 3)) +
   scale_linetype_manual(values = line_types, labels = c("Central fixation area", "Correct side", "Incorrect side"), guide = guide_legend(order = 2)) +
@@ -473,7 +507,7 @@ final_sample_vis_full_trial %>%
   xlab("\nTime from trial start (ms)")  +
   ylab("Proportion looking\n")
 
-ggsave("plot_full_trial_visual.png", path = here("figures"), device = "png", width = 9, height = 11, units = "in", dpi = 300)
+#ggsave("plot_full_trial_visual.png", path = here("figures"), device = "png", width = 9, height = 11, units = "in", dpi = 300)
 
 ```
 
@@ -577,7 +611,7 @@ summary(vis_model_post2)
 
 ###----------------------------------------------------MODEL RESULTS TABLES
 
-table_aud_pre <- tab_model(aud_model_pre, show.re.var = FALSE, show.icc = FALSE)
+tab_model(aud_model_pre, show.re.var = FALSE, show.icc = FALSE)
 tab_model(aud_model_post, show.re.var = FALSE, show.icc = FALSE)
 tab_model(vis_model_pre, show.re.var = FALSE, show.icc = FALSE)
 tab_model(vis_model_post, show.re.var = FALSE, show.icc = FALSE)
@@ -587,6 +621,7 @@ tab_model(vis_model_post, show.re.var = FALSE, show.icc = FALSE)
 # save(vis_model_post, file = here::here("data", "vis_model_post.Rda"))
 # save(aud_model_pre, file = here::here("data", "aud_model_pre.Rda"))
 # save(aud_model_post, file = here::here("data", "aud_model_post.Rda"))
+
 
 ```
 
@@ -714,7 +749,7 @@ vis_model_data_post %>%
 
 ##-----------------------------------AUDITORY
 
-ggpredict(aud_model_pre, terms = c("TimeBin", "trial_num_scaled [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]", "group"), type = "fe", ci.lvl = FALSE) %>% plot(colors = "trial_num_scaled", line.size = 1, connect.lines = TRUE) +
+ggpredict(aud_model_pre, terms = c("time_bin_centred", "trial_num_scaled [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]", "group"), type = "fe", ci.lvl = FALSE) %>% plot(colors = "trial_num_scaled", line.size = 1, connect.lines = TRUE) +
   labs(title = "Predicted values of proportion looking to target during the Training phase \nin Experiment 1c (Auditory condition)", x = "Time in milliseconds during anticipation period", y = "Proportion looking to target", color = "Trial number") +
   scale_color_manual(values = blues, labels = c(2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)) +
   scale_x_continuous(breaks = c(0, 2, 4), labels = c("0", "500", "1000")) +
@@ -724,7 +759,7 @@ ggpredict(aud_model_pre, terms = c("TimeBin", "trial_num_scaled [0, 1, 2, 3, 4, 
 
  ggsave("plot_model_predictions_aud_pre.png", path = here("figures"), device = "png", width = 7, height = 4, units = "in", dpi = 300)
 
-ggpredict(aud_model_post, terms = c("TimeBin", "trial_num_scaled [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]", "group"), type = "fe", ci.lvl = FALSE) %>% plot(colors = "trial_num_scaled", line.size = 1, connect.lines = TRUE) +
+ggpredict(aud_model_post, terms = c("time_bin_centred", "trial_num_scaled [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]", "group"), type = "fe", ci.lvl = FALSE) %>% plot(colors = "trial_num_scaled", line.size = 1, connect.lines = TRUE) +
   labs(title = "Predicted values of proportion looking to target during the Test phase \nin Experiment 1c (Auditory condition)", x = "Time in milliseconds during anticipation period", y = "Proportion looking to target", color = "Trial number") +
   scale_color_manual(values = blues, labels = c(2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)) +
   scale_x_continuous(breaks = c(0, 2, 4), labels = c("0", "500", "1000")) +
@@ -736,7 +771,7 @@ ggpredict(aud_model_post, terms = c("TimeBin", "trial_num_scaled [0, 1, 2, 3, 4,
 
 ##-----------------------------------VISUAL
 
-ggpredict(vis_model_pre, terms = c("TimeBin", "trial_num_scaled [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]", "group"), type = "fe", ci.lvl = FALSE) %>% plot(colors = "trial_num_scaled", line.size = 1, connect.lines = TRUE) +
+ggpredict(vis_model_pre, terms = c("time_bin_centred", "trial_num_scaled [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]", "group"), type = "fe", ci.lvl = FALSE) %>% plot(colors = "trial_num_scaled", line.size = 1, connect.lines = TRUE) +
   labs(title = "Predicted values of proportion looking to target during the Training phase \nin Experiment 1c (Visual condition)", x = "Time in milliseconds during anticipation period", y = "Proportion looking to target", color = "Trial number") +
   scale_color_manual(values = blues, labels = c(2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)) +
   scale_x_continuous(breaks = c(0, 2, 4), labels = c("0", "500", "1000")) +
@@ -746,7 +781,7 @@ ggpredict(vis_model_pre, terms = c("TimeBin", "trial_num_scaled [0, 1, 2, 3, 4, 
 
  ggsave("plot_model_predictions_vis_pre.png", path = here("figures"), device = "png", width = 7, height = 4, units = "in", dpi = 300)
 
-ggpredict(vis_model_post, terms = c("TimeBin", "trial_num_scaled [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]", "group"), type = "fe", ci.lvl = FALSE) %>% plot(colors = "trial_num_scaled", line.size = 1, connect.lines = TRUE) +
+ggpredict(vis_model_post, terms = c("time_bin_centred", "trial_num_scaled [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]", "group"), type = "fe", ci.lvl = FALSE) %>% plot(colors = "trial_num_scaled", line.size = 1, connect.lines = TRUE) +
   labs(title = "Predicted values of proportion looking to target during the Test phase \nin Experiment 1c (Visual condition)", x = "Time in milliseconds during anticipation period", y = "Proportion looking to target", color = "Trial number") +
   scale_color_manual(values = blues, labels = c(2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)) +
   scale_x_continuous(breaks = c(0, 2, 4), labels = c("0", "500", "1000")) +
@@ -754,7 +789,7 @@ ggpredict(vis_model_post, terms = c("TimeBin", "trial_num_scaled [0, 1, 2, 3, 4,
   theme(axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0)),
         axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0)))
 
- ggsave("plot_model_predictions_vis_post.png", path = here("figures"), device = "png", width = 7, height = 4, units = "in", dpi = 300)
+ ggsave("plot_model_predictions_vis_post_unfiltered.png", path = here("figures"), device = "png", width = 7, height = 4, units = "in", dpi = 300)
 
 ```
 #Analysis with their full sample
@@ -765,14 +800,90 @@ ggpredict(vis_model_post, terms = c("TimeBin", "trial_num_scaled [0, 1, 2, 3, 4,
 ```
 
 
-##Problems with Kalashnikova's data...
+# Problems with Kalashnikova's data...
+
+### time series plot, visual condition
 
 ```{r}
 
+#Visual condition time series plot to show mistake
+
+final_sample_vis_full_trial %>%
+  filter(Time >= 1000 & Time <= 5400) %>%
+  mutate(trial_type_labs = case_when(trial_type == "pre-switch" ~ "Training",
+                                     trial_type == "post-switch" ~ "Test"),
+         group = factor(group, levels = c("monolingual", "bilingual"))) %>%
+  mutate(trial_type_labs = factor(trial_type_labs, levels = c("Training", "Test"))) %>%
+  pivot_wider(names_from = AOI, values_from = Prop) %>%
+  group_by(trial_type_labs, group, Time, trial_num) %>%
+  summarise(target = mean(target, na.rm=TRUE), 
+            distractor = mean(distractor, na.rm=TRUE),
+            center = mean(center, na.rm = TRUE))  %>%
+  ungroup() %>%
+  pivot_longer(cols = c(center, target, distractor), names_to = "aoi", values_to = "prop_looking") %>%
+  mutate(aoi = factor(aoi, levels = c("center", "target", "distractor")),
+         trial_labels = paste0("Trial ", trial_num),
+         trial_labels = fct_reorder(trial_labels, trial_num),
+         xmin = case_when(Time == 3200 & group == "monolingual" & aoi == "target" ~ 2250, #setting up the layer for the transparent rectangle showing the original anticipation period
+         TRUE ~ 3200),
+         xmax = case_when(Time == 3200 & group == "monolingual" & aoi == "target" ~ 3250,
+         TRUE ~ 3200),
+         ymin = case_when(Time == 3200 & group == "monolingual" & aoi == "target" ~ Inf,
+         TRUE ~ 0),
+         ymax = case_when(Time == 3200 & group == "monolingual" & aoi == "target" ~ -Inf,
+         TRUE ~ 0),
+         xmin2 = case_when(Time == 3200 & group == "monolingual" & aoi == "target" ~ 3650, #setting up the layer for the transparent rectangle showing the our anticipation period
+         TRUE ~ 3200),
+         xmax2 = case_when(Time == 3200 & group == "monolingual" & aoi == "target" ~ 4650,
+         TRUE ~ 3200),
+         ymin2 = case_when(Time == 3200 & group == "monolingual" & aoi == "target" ~ Inf,
+         TRUE ~ 0),
+         ymax2 = case_when(Time == 3200 & group == "monolingual" & aoi == "target" ~ -Inf,
+         TRUE ~ 0)) %>%
+  ggplot(aes(x = Time, y = prop_looking, color = group, linetype = aoi)) + 
+  geom_rect(aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, fill = "Anticipation Period 1"), alpha = .1, colour = "transparent", show.legend = TRUE) +
+ geom_rect(aes(xmin = xmin2, xmax = xmax2, ymin = ymin2, ymax = ymax2, fill = "Anticipation Period 2"), alpha = .1, colour = "transparent", show.legend = TRUE) +
+  geom_line(aes(alpha = aoi, size = aoi)) +
+  scale_color_manual(values = line_colors, guide = guide_legend(order = 1), labels = c("Monolinguals", "Bilinguals")) +
+  scale_fill_manual(values = c("#ffb600", "#556677"), labels = c("Original interval (2250–3250 ms)", "Corrected interval (3650–4650 ms)"), guide = guide_legend(order = 3)) +
+  scale_linetype_manual(values = line_types, labels = c("Central fixation area", "Correct side", "Incorrect side"), guide = guide_legend(order = 2)) +
+  scale_y_continuous(n.breaks = 3) +
+  scale_x_continuous(breaks = c(1000, 2000, 3000, 4000, 5000, 6000)) +
+  scale_alpha_manual(values = c(0.5, 0.9, 0.725), guide = "none") +
+  scale_size_manual(values = line_sizes, guide = "none") +
+  labs(linetype = "Area of interest",
+       color = "Language group",
+       fill = "Time period") +
+  #geom_text(data = facet_text_vis, label = facet_text_vis$label, show.legend = FALSE, color = "#666666", size = 3) +
+  facet_grid(trial_labels ~ trial_type_labs) +
+  # annotate("rect", xmin = 2150, xmax = 3150, ymin = -Inf, ymax = Inf, fill = "#fff000", alpha = 0.1) +
+  # annotate("text", x = 2650, y = 0.875, label = "Anticipation \n Period", size = 2.75, color = "#927774") +
+  ggtitle("Time course of infant looking for Visual condition: compare anticipation intervals") + 
+  theme_minimal(base_size = 13.5) +
+  theme(plot.title = element_text(hjust = 0.25),
+        strip.background = element_rect(fill = "#D9D9D9", color = "#9b9b9b"),
+        panel.background = element_rect(fill = "transparent", color = "transparent"),
+        panel.grid = element_line(color = "#eaeaea"),
+        panel.grid.major = element_line(size = .25),
+        panel.grid.minor = element_blank(),
+        panel.grid.major.x = element_blank(),
+        panel.spacing = unit(.5, "lines"),
+        axis.text = element_text(size = 10)) +
+  xlab("\nTime from trial start (ms)")  +
+  ylab("Proportion looking\n")
+
+#ggsave("compare_intervals.png", path = here("figures"), device = "png", width = 11, height = 9, units = "in", dpi = 300)
+
+
+```
+
+
+### Check block means
+```{r}
 
 #-----------------------------The following numbers for Auditory condition are very close to Kalashnikova's
 
-aud_all %>%                       TRUE ~ auditory_tl)) %>%
+aud_all %>%                       
   filter(auditory_tl <= .6) %>%
   filter(bin_start_time >= 2250 & bin_start_time <= 3250) %>%
   mutate(trial_type = case_when(trial_index > 12 ~ "post_switch",
@@ -802,7 +913,7 @@ aud_all %>%                       TRUE ~ auditory_tl)) %>%
   arrange(desc(trial_type), block) %>% View()
 
 
-#-----------------------------The following numbers for Visual condition are very close to Kalashnikova's, proving that they analyzed the incorrect time window. What they analyzed was NOT the anticipation period, but instead when the kids were all looking at the circle
+#-----------------------------The following numbers for Visual condition are fairly close to Kalashnikova's, proving that they analyzed the incorrect time window. What they analyzed was NOT the anticipation period, but instead when the kids were all looking at the circle
 
 vis_all %>%
   filter(visual_tl <= .6) %>%
@@ -867,7 +978,12 @@ vis_all %>%
   select(trial_type, block, mean_monolingual, sd_monolingual, n_monolingual, mean_bilingual, sd_bilingual, n_bilingual) %>%
   arrange(desc(trial_type), block) %>% View()
   
-  
+```
+
+### How many N per trial?
+
+```{r}
+
 #-------------------------------------------How many N per trial?
 
 aud_all %>%
@@ -909,6 +1025,12 @@ vis_all %>%
   summarize(n = length(unique(id))) %>% 
   ungroup() %>%
   arrange(group, desc(trial_type), trial_index) %>% View()
+
+```
+
+### Block means by baby
+
+```{r}
 
 #---------------------------Block means by baby 
 
@@ -1022,10 +1144,22 @@ vis_by_part_means_adjusted <- vis_all %>%
             n = length(unique(id))) %>%
   arrange(block, desc(trial_type), id)
 
+```
+
+### First go at models with block means
+```{r}
+
   
 m1 <- lmer(prop_target ~ group * trial_type + block + (1 | id), data = aud_by_part_means_original) #very similar results to Kalashnikova, despite singular fit
 m2 <- lmer(prop_target ~ group * trial_type + block + (1 | id), data = vis_by_part_means_original) #very similar results to Kalashnikova
 m3 <- lmer(prop_target ~ group * trial_type + block + (1 | id), data = vis_by_part_means_adjusted) #singular fit
+
+```
+
+### Recreate long data frame to reproduce models
+
+```{r}
+
 
 ##----------------------------------------------Try to recreate their long data frame to reproduce models
 
@@ -1049,6 +1183,12 @@ ant_long_adjusted <- aud_by_part_means_adjusted %>%
 
 Ant_Long <- read_csv(here("data", "Anticipation_Long.csv"))
 Ant_Long$Group<-as.factor(Ant_Long$Group)
+
+```
+
+### Models
+
+```{r}
 
 # Model without interaction term – compare correct anticipation period to Kalashnikova's (no differences in conclusions)
 
@@ -1125,8 +1265,6 @@ reward_data_orig <- read_csv(here("data", "Reward_Long.csv"))
 reward_data_orig$Group <- as.factor(reward_data_orig$Group)
 
 reward_aud_original <- aud_all %>%
-  mutate(auditory_tl = case_when(id == "5314" ~ visual_tl, 
-                                 TRUE ~ auditory_tl)) %>%
   filter(auditory_tl <= .6) %>%
   filter(bin_start_time >= 3250 & bin_start_time <= 5000) %>%
   mutate(trial_type = case_when(trial_index > 12 ~ "post-switch",
@@ -1153,8 +1291,6 @@ reward_aud_original <- aud_all %>%
 
 
 reward_aud_adjusted <- aud_all %>%
-  mutate(auditory_tl = case_when(id == "5314" ~ visual_tl, 
-                                 TRUE ~ auditory_tl)) %>%
   filter(auditory_tl <= .6) %>%
   filter(bin_start_time >= 3350 & bin_start_time <= 5100) %>%
   mutate(trial_type = case_when(trial_index > 12 ~ "post-switch",
@@ -1181,8 +1317,6 @@ reward_aud_adjusted <- aud_all %>%
 
 
 reward_vis_original <- vis_all %>%
-  mutate(visual_tl = case_when(id == "5314" ~ auditory_tl, 
-                                 TRUE ~ visual_tl)) %>%
   filter(visual_tl <= .6) %>%
   filter(original_start_time >= 3250 & original_start_time <= 5000) %>%
   mutate(trial_type = case_when(trial_index > 12 ~ "post-switch",
@@ -1209,8 +1343,6 @@ reward_vis_original <- vis_all %>%
 
 
 reward_vis_adjusted <- vis_all %>%
-  mutate(visual_tl = case_when(id == "5314" ~ auditory_tl, 
-                                 TRUE ~ visual_tl)) %>%
   filter(visual_tl <= .6) %>%
   filter(bin_start_time >= 4650 & bin_start_time <= 6400) %>%
   mutate(trial_type = case_when(trial_index > 12 ~ "post-switch",
@@ -1266,6 +1398,12 @@ Anova(reward_replicated_interact, test="F") %>% View()
 reward_adjusted_interact <-lmer(prop_target ~ group * condition* trial_type + block + (1 | id), data = reward_data_adjusted)
 summary(reward_adjusted_interact)
 Anova(reward_adjusted_interact, test="F") %>% View()
+
+```
+
+### Reward T Tests
+
+```{r}
 
 rewardS <- read_csv(here("data", "Reward_Short.csv"))
 
@@ -1346,8 +1484,8 @@ reward_means_replicated_all %>%
 
 #Original data
 
-RewardMo<-subset(reward_data_orig, Group == "1")
-RewardBi<-subset(reward_data_orig, Group == "2")
+RewardMo<-subset(rewardS, Group == "1")
+RewardBi<-subset(rewardS, Group == "2")
 
 t.test(RewardMo$AU_PRE_Block1, mu=.5)
 t.test(RewardMo$AU_PRE_Block2, mu=.5)
@@ -1376,8 +1514,85 @@ t.test(RewardBi$VI_POST_Block1, mu=.5)
 t.test(RewardBi$VI_POST_Block2, mu=.5)
 t.test(RewardBi$VI_POST_Block3, mu=.5)
 
-#Corrected data
-  
+#Replicated data
+
+reward_data_replicated_mono <- reward_data_replicated %>%
+  pivot_wider(names_from = c(condition, trial_type, block), values_from = prop_target, id_cols = c(id, group)) %>%
+  filter(group == "monolingual")
+
+reward_data_replicated_bi <- reward_data_replicated %>%
+  pivot_wider(names_from = c(condition, trial_type, block), values_from = prop_target, id_cols = c(id, group)) %>%
+  filter(group == "bilingual")
+
+t.test(reward_data_replicated_mono$`auditory_pre-switch_1`, mu=.5)
+t.test(reward_data_replicated_mono$`auditory_pre-switch_2`, mu=.5)
+t.test(reward_data_replicated_mono$`auditory_pre-switch_3`, mu=.5)
+t.test(reward_data_replicated_mono$`auditory_post-switch_1`, mu=.5)
+t.test(reward_data_replicated_mono$`auditory_post-switch_2`, mu=.5)
+t.test(reward_data_replicated_mono$`auditory_post-switch_3`, mu=.5)
+t.test(reward_data_replicated_mono$`visual_pre-switch_1`, mu=.5)
+t.test(reward_data_replicated_mono$`visual_pre-switch_2`, mu=.5)
+t.test(reward_data_replicated_mono$`visual_pre-switch_3`, mu=.5)
+t.test(reward_data_replicated_mono$`visual_post-switch_1`, mu=.5)
+t.test(reward_data_replicated_mono$`visual_post-switch_2`, mu=.5)
+t.test(reward_data_replicated_mono$`visual_post-switch_3`, mu=.5)
+
+t.test(reward_data_replicated_bi$`auditory_pre-switch_1`, mu=.5)
+t.test(reward_data_replicated_bi$`auditory_pre-switch_2`, mu=.5)
+t.test(reward_data_replicated_bi$`auditory_pre-switch_3`, mu=.5)
+t.test(reward_data_replicated_bi$`auditory_post-switch_1`, mu=.5)
+t.test(reward_data_replicated_bi$`auditory_post-switch_2`, mu=.5)
+t.test(reward_data_replicated_bi$`auditory_post-switch_3`, mu=.5)
+t.test(reward_data_replicated_bi$`visual_pre-switch_1`, mu=.5)
+t.test(reward_data_replicated_bi$`visual_pre-switch_2`, mu=.5)
+t.test(reward_data_replicated_bi$`visual_pre-switch_3`, mu=.5)
+t.test(reward_data_replicated_bi$`visual_post-switch_1`, mu=.5)
+t.test(reward_data_replicated_bi$`visual_post-switch_2`, mu=.5)
+t.test(reward_data_replicated_bi$`visual_post-switch_3`, mu=.5)
+
+
+
+#Adjusted data
+
+reward_data_adjusted_mono <- reward_data_adjusted %>%
+  pivot_wider(names_from = c(condition, trial_type, block), values_from = prop_target, id_cols = c(id, group)) %>%
+  filter(group == "monolingual")
+
+reward_data_adjusted_bi <- reward_data_adjusted %>%
+  pivot_wider(names_from = c(condition, trial_type, block), values_from = prop_target, id_cols = c(id, group)) %>%
+  filter(group == "bilingual")
+
+t.test(reward_data_adjusted_mono$`auditory_pre-switch_1`, mu=.5)
+t.test(reward_data_adjusted_mono$`auditory_pre-switch_2`, mu=.5)
+t.test(reward_data_adjusted_mono$`auditory_pre-switch_3`, mu=.5)
+t.test(reward_data_adjusted_mono$`auditory_post-switch_1`, mu=.5)
+t.test(reward_data_adjusted_mono$`auditory_post-switch_2`, mu=.5)
+t.test(reward_data_adjusted_mono$`auditory_post-switch_3`, mu=.5)
+t.test(reward_data_adjusted_mono$`visual_pre-switch_1`, mu=.5)
+t.test(reward_data_adjusted_mono$`visual_pre-switch_2`, mu=.5)
+t.test(reward_data_adjusted_mono$`visual_pre-switch_3`, mu=.5)
+t.test(reward_data_adjusted_mono$`visual_post-switch_1`, mu=.5)
+t.test(reward_data_adjusted_mono$`visual_post-switch_2`, mu=.5)
+t.test(reward_data_adjusted_mono$`visual_post-switch_3`, mu=.5)
+
+t.test(reward_data_adjusted_bi$`auditory_pre-switch_1`, mu=.5)
+t.test(reward_data_adjusted_bi$`auditory_pre-switch_2`, mu=.5)
+t.test(reward_data_adjusted_bi$`auditory_pre-switch_3`, mu=.5)
+t.test(reward_data_adjusted_bi$`auditory_post-switch_1`, mu=.5)
+t.test(reward_data_adjusted_bi$`auditory_post-switch_2`, mu=.5)
+t.test(reward_data_adjusted_bi$`auditory_post-switch_3`, mu=.5)
+t.test(reward_data_adjusted_bi$`visual_pre-switch_1`, mu=.5)
+t.test(reward_data_adjusted_bi$`visual_pre-switch_2`, mu=.5)
+t.test(reward_data_adjusted_bi$`visual_pre-switch_3`, mu=.5)
+t.test(reward_data_adjusted_bi$`visual_post-switch_1`, mu=.5)
+t.test(reward_data_adjusted_bi$`visual_post-switch_2`, mu=.5)
+t.test(reward_data_adjusted_bi$`visual_post-switch_3`, mu=.5)
+
+
+```
+
+### Check baby ID not matching
+```{r}
 
 
 #---------------------------check if typo matches trackloss for another ID
